--- a/.ftpconfig
+++ b/.ftpconfig
@@ -2,8 +2,8 @@
     "protocol": "ftp",
     "host": "web1.fh-htwchur.ch",
     "port": 21,
-    "user": "188407_15_1",
-    "pass": "Asr9CfbcNDXR",
+    "user": "188407_16_1",
+    "pass": "@7Gr4ePnNHmv",
     "promptForPass": false,
     "remote": "web/",
     "local": "",
